# Baltasar.io

./: .gitignore  README.md  pelicanconf.py  pyproject.toml
content/pages/: about.md  upcoming.md
content/posts/: Chile.md  cellular_automata.md  chile.md  first_article.md  hilbert.md  lsystem.md
output/: about.html  arcgis.html  archives.html  authors.html  automata.html  bsc-dissertaftion.html  bsc-dissertation.html  categories.html  chile.html  computer-science.html  dog.html  dogs.html  fun-with-fungi.html  hilbert.html  index.html  inequalities.html  js.html  lsystem.html  maps.html  mathematics.html  my-super-post.html  natural-patterns.html  physics.html  politics.html  python.html  spatial-analysds.html  spatial-analysis.html  stata.html  statistics.html  tags.html  upcoming.html  welcome.html  wood.html
output/author/: baltasar.html  livia-jakob.html
output/category/: intro.html  misc.html  politics.html  python.html  spatial-analysis.html  spatial-asnalysis.html
output/feeds/: all.atom.xml  python.atom.xml
output/pages/: welcome.html
output/tag/: dog.html  welcome.html  wood.html
theme/templates/: album.html  article.html  base.html  index.html  page.html
