[tool.poetry]
name = "sequoia"
version = "0.1.0"
description = ""
authors = ["Baltasar Salamon <baltasar.salamonwelwert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2.0"
Markdown = "^3.1.1"
pelican-albums = "^0.6.1"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
